# API-in-different-languages

./: dups.py  dups.rs  main.go  main.php  main.rs  test.js  test.py
Rust/actix_test/: Cargo.toml
Rust/actix_test/src/: main.rs
Rust/axum_test/: Cargo.toml
Rust/axum_test/src/: main.rs
Rust/rocket_test/: Cargo.toml
Rust/rocket_test/src/: main.rs
